# tiny-games

./: Cargo.toml  index.html  server.ts  snake3d.html
.github/workflows/: deploy.yml
src/: main.rs  snake3d.rs
