[package]
name = "tiny-games"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snake-2d"
path = "src/main.rs"

[[bin]]
name = "snake-3d"
path = "src/snake3d.rs"

[dependencies]
bevy = "0.18"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"
